--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@geoapify/geocoder-autocomplete": "^1.3.4",
     "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.5.2",
@@ -12,12 +13,15 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "express": "^4.17.3",
     "jquery": "^3.6.0",
     "mongoose": "^6.2.8",
     "react": "^17.0.2",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-places-autocomplete": "^7.3.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
